--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,6 +81,7 @@
                 android:text="It means that you can use app only after watching ads" />
 
             <TextView
+                android:id="@+id/serviceTimeRemainingTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="fsdfasdf" />
@@ -99,6 +100,7 @@
                     android:layout_marginEnd="4dp"
                     android:text="Watch ad"
                     android:enabled="true"
+                    app:rippleColor="@color/black"
                     android:textColor="@color/black"
                     app:strokeColor="@color/black"
                     app:iconTint="@color/black"
@@ -109,6 +111,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/Widget.Material3.Button.Icon"
+                    app:rippleColor="@color/black"
                     android:layout_marginStart="4dp"
                     android:backgroundTint="@color/enabled_button"
                     android:text="@string/subscribe"
