--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,11 +33,12 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/messagesListCardView"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="0dp"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginVertical="8dp"
         android:elevation="1dp"
         app:cardCornerRadius="32dp"
+        app:layout_constraintBottom_toTopOf="@+id/subscriptionCardView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recyclerViewHint">
@@ -108,6 +109,17 @@
                 android:gravity="end">
 
                 <com.google.android.material.button.MaterialButton
+                    android:id="@+id/subscriptionInfoButton"
+                    style="@style/Widget.Material3.Button.IconButton.Filled"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="4dp"
+                    android:enabled="true"
+                    app:rippleColor="@color/black"
+                    app:iconTint="@color/black"
+                    app:icon="@drawable/baseline_info_24" />
+
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/watchAdButton"
                     style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                     android:layout_width="wrap_content"
@@ -153,9 +165,40 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="8dp"
             android:orientation="vertical"
             android:padding="24dp">
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/errorCardView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                app:cardBackgroundColor="@color/light_yellow">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="4dp">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="2dp"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/outline_report_problem_24"/>
+
+                    <TextView
+                        android:id="@+id/errorTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="2dp"
+                        android:text="There is some problem!"/>
+
+                </LinearLayout>
+
+            </com.google.android.material.card.MaterialCardView>
 
             <TextView
                 android:id="@+id/stateTextView"
