--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,272 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:animateLayoutChanges="true"
-    tools:context=".presentation.MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".presentation.activity.MainActivity">
 
-    <TextView
-        android:id="@+id/recyclerViewHint"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/messages_history"
-        android:textColor="@color/black"
-        android:textSize="26sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/closeMessageHistoryImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="visible"
-        android:contentDescription="@string/close_list_of_messages_history"
-        android:src="@drawable/baseline_close_24"
-        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewHint"
-        app:layout_constraintEnd_toEndOf="@+id/messagesListCardView"
-        app:layout_constraintTop_toTopOf="@+id/recyclerViewHint" />
-
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/messagesListCardView"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/frameLayout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginVertical="8dp"
-        android:elevation="1dp"
-        app:cardCornerRadius="32dp"
-        app:layout_constraintBottom_toTopOf="@+id/subscriptionCardView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerViewHint">
-
-        <androidx.core.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <LinearLayout
-                android:id="@+id/messagesLinearLayout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:animateLayoutChanges="true"
-                android:orientation="vertical">
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/messagesRecyclerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    tools:listitem="@layout/item_message" />
-
-            </LinearLayout>
-
-        </androidx.core.widget.NestedScrollView>
-
-    </com.google.android.material.card.MaterialCardView>
-
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/subscriptionCardView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:cardCornerRadius="32dp"
-        app:layout_constraintBottom_toTopOf="@+id/stateCardView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_margin="8dp">
-
-            <TextView
-                android:id="@+id/subscriptionStateTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Subscription is not connected"
-                android:textSize="24sp" />
-
-            <TextView
-                android:id="@+id/subscriptionStateHintTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="It means that you can use app only after watching ads" />
-
-            <TextView
-                android:id="@+id/serviceTimeRemainingTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="fsdfasdf" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="end">
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/subscriptionInfoButton"
-                    style="@style/Widget.Material3.Button.IconButton.Filled"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="4dp"
-                    android:enabled="true"
-                    app:rippleColor="@color/black"
-                    app:iconTint="@color/black"
-                    app:icon="@drawable/baseline_info_24" />
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/watchAdButton"
-                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="4dp"
-                    android:text="Watch ad"
-                    android:enabled="true"
-                    app:rippleColor="@color/black"
-                    android:textColor="@color/black"
-                    app:strokeColor="@color/black"
-                    app:iconTint="@color/black"
-                    app:icon="@drawable/baseline_settings_24" />
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/connectSubscriptionButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="@style/Widget.Material3.Button.Icon"
-                    app:rippleColor="@color/black"
-                    android:layout_marginStart="4dp"
-                    android:backgroundTint="@color/enabled_button"
-                    android:text="@string/subscribe"
-                    app:icon="@drawable/baseline_power_24" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </com.google.android.material.card.MaterialCardView>
-
-
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/stateCardView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:cardBackgroundColor="@color/enabled_card"
-        app:cardCornerRadius="32dp"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="8dp"
-            android:orientation="vertical"
-            android:padding="24dp">
-
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/errorCardView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                app:cardBackgroundColor="@color/light_yellow">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="4dp">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="2dp"
-                        android:layout_gravity="center_vertical"
-                        android:src="@drawable/outline_report_problem_24"/>
-
-                    <TextView
-                        android:id="@+id/errorTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginStart="2dp"
-                        android:text="There is some problem!"/>
-
-                </LinearLayout>
-
-            </com.google.android.material.card.MaterialCardView>
-
-            <TextView
-                android:id="@+id/stateTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/enabled"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
-                android:textSize="40sp"
-                android:textStyle="bold" />
-
-            <LinearLayout
-                android:id="@+id/addressLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toTopOf="@+id/activateServiceButton"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
-
-                <TextView
-                    android:id="@+id/ipAddressTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="IP ADDRESS"
-                    android:textColor="@color/white"
-                    android:textSize="20sp" />
-
-                <TextView
-                    android:id="@+id/portTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="PORT"
-                    android:textColor="@color/white"
-                    android:textSize="20sp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:gravity="end"
-                android:orientation="horizontal">
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/settingsButton"
-                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="4dp"
-                    android:text="@string/settings"
-                    android:enabled="true"
-                    app:icon="@drawable/baseline_settings_24" />
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/activateServiceButton"
-                    style="@style/Widget.Material3.Button.Icon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
-                    android:backgroundTint="@color/enabled_button"
-                    android:text="@string/enable"
-                    app:icon="@drawable/baseline_power_24" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </com.google.android.material.card.MaterialCardView>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
