--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="disabled_card">#EF5350</color>
     <color name="disabled_button">#B71C1C</color>
     <color name="light_yellow">#FFFF00</color>
+    <color name="gray">#BDBDBD</color>
 
 
 </resources>
