set new toolbar, fixed status bar, added hint for empty message

--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -6,6 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".presentation.fragment.MessagesFragment">
 
+    <TextView
+        android:id="@+id/noMessagesHintTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        android:text="@string/no_messages_yet"
+        android:textSize="25sp"
+        android:textAlignment="center"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/messagesListCardView"
         android:layout_width="match_parent"
