--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Sms_modem" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Sms_modem" parent="Theme.Material3.Light">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="colorPrimary">@color/white</item>
+        <item name="android:statusBarColor">@android:color/black</item>
     </style>
+
+    <style name="Theme.Sms_modem" parent="Base.Theme.Sms_modem" />
 </resources>
