--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Sms_modem" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Sms_modem" parent="Theme.Material3.Light">
         <!-- Customize your light theme here. -->
-         <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimary">@color/white</item>
+        <item name="android:statusBarColor">@android:color/black</item>
     </style>
 
     <style name="Theme.Sms_modem" parent="Base.Theme.Sms_modem" />
